# yaaat

./: .gitignore  LICENSE  MANIFEST.IN  OMIT.txt  QA_tests.txt  README.md  TODO.txt  User_Guide.md  cherry-commit.py  compare_excl.ps1  compare_excl_output.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
api/: modules.rst  yaaat.core.rst  yaaat.rst  yaaat.tabs.rst
images/: placeholder.md
test_files/: test.md
yaaat/: __init__.py  __main__.py  base_annotator.py  changepoint_annotator.py  changepoint_injector.py  config.py  harmonic_annotator.py  harmonic_layer.py  harmonic_learner.py  main.py  peak_annotator.py  sequence_annotator.py  utils.py
yaaat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yaaat/algs/: fuzzy_valley.py  peak_ratio_harmonics.py
yaaat/audio_utils/: __init__.py  audio_utils.py
yaaat/contours/: processing.py
yaaat/core/: __init__.py  annotation_io.py  audio_utils.py  base_layer.py  file_nav.py  grid_layer.py  interaction.py  visualization.py
yaaat/images/: lasso_screenshot.odt
yaaat/layers/: base_layer.py  binary_annotation_layer.py  changepoint_layer.py  cluster_spectrog.py  contour_layer.py  harmonic_layer.py
yaaat/notebooks/: 01_changepoint_tutorial.ipynb  01_test_changepoint_workflow.ipynb
yaaat/tabs/: __init__.py  base_annotator.py  binary_annotator.py  changepoint_annotator.py  harmonic_annotator.py  peak_annotator.py  sequence_annotator.py
yaaat/utils/: __init__.py  audio.py  file_management.py  utils.py
yatch/: .gitignore  LICENSE
yatch/yaaat/: __init__.py  __main__.py  main.py
yatch/yaaat/algs/: fuzzy_valley.py  harmonic_stacker.py
yatch/yaaat/contours/: __init__.py  algorithms.py  config.py  experiments.py  optimize.py  plotting.py
yatch/yaaat/layers/: changepoint_layer.py  harmonic_layer.py
yatch/yaaat/tabs/: changepoint_annotator.py  harmonic_annotator.py
