[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaaat"
version = "0.2.0"
description = "YAAAT! Yet Another Audio Annotation Tool. Interactive bioacoustic annotation tool for measuring vocalizations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]   # adjust to actual license filename

authors = [
    { name = "laelume" }
]

keywords = [
    "bioacoustic", "acoustic", "ecoacoustic", "soundscape", 
    "annotation", "audio annotation", "annotation tool", 
    "signal processing", "audio analysis", "time frequency representation", "tfr", 
    "spectrogram", "spectral analysis", "speech analysis", 
    "vocalization", "animal communications", "communication", 
    "interactive", "visualization", "toolkit", 
    "changepoint", "nonlinear", "nonlinear phenomena", "nlp"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["numpy", "scipy", "matplotlib", "natsort", "pandas", "pysoniq>=0.1.8"]

[project.optional-dependencies]
ai = [
    # BirdNET integration via yaaat.detectify — optional detection backend
    "birdnet",
]

[project.scripts]
yaaat = "yaaat.main:main"

[project.urls]
Homepage   = "https://github.com/laelume/yaaat"
Repository = "https://github.com/laelume/yaaat"

[tool.setuptools.packages.find]
where = ["."]
include = ["yaaat*"]

[tool.setuptools.package-data]
yaaat = [
    "test_files/test_audio/**/*.wav",
    "images/*",
]